green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-green-svc
spec:
  selector:
    app: myapp
    version: green
  ports:
  - port: 8080
    targetPort: 8080
